--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 # aws workspace for s3 lab
 tasks:
-  - name: aws cli
+  - name: aws cli for s3
     env: 
       AWS_CLI_AUTO_PROMPT: on-partial
       befor: | 
@@ -10,4 +10,3 @@ tasks:
        unzip awscliv2.zip
        sudo ./aws/install
        aws configure
-       
